# x2_face_ros2_system

./: .gitignore  ARCHITECTURE_REPORT.md  README.md  REAL_ROBOT_INTEGRATION_REPORT.md  SOFTWARE_CAPABILITY_REPORT.md
robot_system/: config.py  main.py  requirements.txt
robot_system/adapters/: __init__.py  robot_sdk_adapter.py  ros2_adapter.py
robot_system/audio/: llm_client.py  tts_engine.py
robot_system/behavior/: action_executor.py  dialog_policy.py  farewell_policy.py  gesture.py  greeting_policy.py  nav_policy.py
robot_system/core/: brain.py  command_emitter.py  cooldown_manager.py  event_bus.py  event_router.py  event_schema.py  event_validator.py  health_monitor.py  policy_layer.py  policy_types.py  priority.py  state_machine.py  system_clock.py  trace_logger.py  types.py
robot_system/face_core/: __init__.py  capacity_manager.py  repository.py
robot_system/navigation/: nav_client.py  nav_controller.py
robot_system/policy/: __init__.py  daily_welcome_tracker.py  recognition_guard.py  speech_throttle.py  (+2 more)
robot_system_ros2/: CMakeLists.txt  package.xml  robot_system  setup.cfg  setup.py
robot_system_ros2/launch/: robot_system.launch.py
robot_system_ros2/msg/: Action.msg  Event.msg  Face.msg  NavGoal.msg
robot_system_ros2/ros2_bridge/: __init__.py  action_node.py  audio_node.py  backpressure_controller.py  brain_node.py  bus_adapter.py  event_bridge_node.py  event_codec.py  monitor_node.py  nav_node.py  node_utils.py  node_watchdog.py  path_setup.py  vision_node.py
robot_system_ros2/ros2_bridge/core/: __init__.py  event_metrics.py  runtime_state.py
(+8 files in other folders)
